[gd_scene load_steps=11 format=4 uid="uid://bx8ht3bt5lbpu"]

[ext_resource type="Script" path="res://Scripts/world_select_button.gd" id="1_fwsvf"]
[ext_resource type="TileSet" uid="uid://mgcmixwg7fq1" path="res://Assets/TileSets/PuzzlePieceTileSet.tres" id="2_dcqmi"]
[ext_resource type="FontFile" uid="uid://b51e4e1htly8h" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="4_6ap86"]
[ext_resource type="SpriteFrames" uid="uid://cnfuri6e753ws" path="res://Scenes/PlayerSprites/player2_frames.tres" id="4_iobep"]
[ext_resource type="Shader" path="res://Assets/Shaders/PuzzleOutline.gdshader" id="5_hwcmm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_812v4"]
size = Vector2(256, 256)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g8q12"]

[sub_resource type="LabelSettings" id="LabelSettings_6opex"]
font = ExtResource("4_6ap86")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_y138h"]
line_spacing = 10.945
font = ExtResource("4_6ap86")
font_size = 18
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pb4r2"]
resource_local_to_scene = true
shader = ExtResource("5_hwcmm")
shader_parameter/speed = 1.405
shader_parameter/color = Vector4(1, 1, 1, 1)

[node name="Template World" type="Area2D" groups=["PuzzlePieces"]]
position = Vector2(483, 242)
collision_mask = 5
script = ExtResource("1_fwsvf")
nb_of_completed_levels = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_812v4")
metadata/_edit_lock_ = true

[node name="Shape" type="Polygon2D" parent="."]
clip_children = 2
material = SubResource("ShaderMaterial_g8q12")
polygon = PackedVector2Array(-128, -128, 128, -128, 128, 128, 35, 128, 34.3275, 134.828, 32.3358, 141.394, 29.1014, 147.445, 24.7487, 152.749, 19.445, 157.101, 13.3939, 160.336, 6.82816, 162.327, 2.14306e-15, 163, -6.82816, 162.327, -13.3939, 160.336, -19.445, 157.101, -24.7487, 152.749, -29.1014, 147.445, -32.3358, 141.394, -34.3275, 134.828, -35, 128, -128, 128, -128, -128)

[node name="Background" type="TileMapLayer" parent="Shape"]
position = Vector2(-25.6, -25.6)
scale = Vector2(0.8, 0.8)
tile_map_data = PackedByteArray("AAD+//7/AwACAAgAAAD+////AwACAAgAAAD+/wAAAwACAAgAAAD+/wEAAwACAAgAAAD+/wIAAwACAAgAAAD//wIAAwACAAgAAAD//wEAAwACAAgAAAD//wAAAwACAAgAAAD/////AwACAAgAAAD///7/AwACAAgAAAAAAP7/AwACAAgAAAAAAP//AwACAAgAAAAAAAAAAwACAAgAAAAAAAEAAwACAAgAAAAAAAIAAwACAAgAAAABAAIAAwACAAgAAAABAAEAAwACAAgAAAABAAAAAwACAAgAAAABAP7/AwACAAgAAAABAP//AwACAAgAAAACAAIAAwACAAgAAAACAAEAAwACAAgAAAACAAAAAwACAAgAAAACAP//AwACAAgAAAACAP7/AwACAAgAAAACAP3/AwACAAgAAAABAP3/AwACAAgAAAAAAP3/AwACAAgAAAD///3/AwACAAgAAAD+//3/AwACAAgAAAD9//3/AwACAAgAAAD9//7/AwACAAgAAAD9////AwACAAgAAAD9/wAAAwACAAgAAAD9/wEAAwACAAgAAAD9/wIAAwACAAgAAAD9/wMAAwACAAgAAAD+/wMAAwACAAgAAAD//wMAAwACAAIAAAAAAAMAAwACAAIAAAABAAMAAwACAAIAAAACAAMAAwACAAgAAAADAAMAAwACAAgAAAADAAIAAwACAAgAAAADAAEAAwACAAgAAAADAAAAAwACAAgAAAADAP//AwACAAgAAAADAP7/AwACAAgAAAADAP3/AwACAAgAAAA=")
tile_set = ExtResource("2_dcqmi")
collision_enabled = false

[node name="Foreground" type="TileMapLayer" parent="Shape"]
position = Vector2(-25.6, -25.6)
scale = Vector2(0.8, 0.8)
tile_map_data = PackedByteArray("AAD+//7/AwACAAMAAAD///7/AwACAAMAAAAAAP7/AwACAAMAAAABAP7/AwACAAMAAAACAP7/AwACAAMAAAD+/wIAAwACAAEAAAD//wIAAwACAAEAAAAAAAIAAwACAAEAAAABAAIAAwACAAEAAAACAAIAAwACAAEAAAD//wEAAAAFAAQAAAA=")
tile_set = ExtResource("2_dcqmi")

[node name="PlayerSprite" type="Node2D" parent="Shape" groups=["PlayerSprites"]]
position = Vector2(-28, 22)

[node name="Sprite" type="AnimatedSprite2D" parent="Shape/PlayerSprite"]
position = Vector2(-28, 3)
scale = Vector2(1.70725, 1.70725)
sprite_frames = ExtResource("4_iobep")
animation = &"Idle"
offset = Vector2(0, -14.0577)

[node name="Overlay" type="Polygon2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
clip_children = 2
material = SubResource("ShaderMaterial_g8q12")
polygon = PackedVector2Array(-128, -128, 128, -128, 128, 128, 35, 128, 34.3275, 134.828, 32.3358, 141.394, 29.1014, 147.445, 24.7487, 152.749, 19.445, 157.101, 13.3939, 160.336, 6.82816, 162.327, 2.14306e-15, 163, -6.82816, 162.327, -13.3939, 160.336, -19.445, 157.101, -24.7487, 152.749, -29.1014, 147.445, -32.3358, 141.394, -34.3275, 134.828, -35, 128, -128, 128, -128, -128)

[node name="WorldName" type="Label" parent="Overlay"]
z_index = 1
offset_left = -127.0
offset_top = 91.0
offset_right = 128.0
offset_bottom = 122.0
text = "KING'S QUEST"
label_settings = SubResource("LabelSettings_6opex")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Levels" type="Label" parent="Overlay"]
z_index = 1
offset_left = 14.0
offset_top = -127.0
offset_right = 127.0
offset_bottom = -81.0
text = "10/10"
label_settings = SubResource("LabelSettings_y138h")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Collectibles" type="Label" parent="Overlay"]
z_index = 1
offset_left = -124.0
offset_top = -127.0
offset_right = -25.0
offset_bottom = -81.0
text = "8/10"
label_settings = SubResource("LabelSettings_y138h")
vertical_alignment = 1

[node name="PlayIcon" type="Polygon2D" parent="Overlay"]
z_index = 1
position = Vector2(7, 0)
scale = Vector2(1.12274, 1.12274)
color = Color(1, 1, 1, 0.411765)
polygon = PackedVector2Array(-25, 25, 25, 0, -25, -25)

[node name="Outline" type="Line2D" parent="."]
z_index = -1
texture_repeat = 2
material = SubResource("ShaderMaterial_pb4r2")
points = PackedVector2Array(-128, -128, 128, -128, 128, 128, 35, 128, 34.3275, 134.828, 32.3358, 141.394, 29.1014, 147.445, 24.7487, 152.749, 19.445, 157.101, 13.3939, 160.336, 6.82816, 162.327, 2.14306e-15, 163, -6.82816, 162.327, -13.3939, 160.336, -19.445, 157.101, -24.7487, 152.749, -29.1014, 147.445, -32.3358, 141.394, -34.3275, 134.828, -35, 128, -128, 128, -128, -128)
width = 5.0
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
